added second version of project - OOP version
js files changed - added version using object oriented programming.
added classes Cart and Gallery, which are imported as a module

--- a/Frontend Mentor/07_ecommerce-product-page-main/my_solution/index.html
+++ b/Frontend Mentor/07_ecommerce-product-page-main/my_solution/index.html
@@ -396,6 +396,7 @@
         >Frontend Mentor</a
       >. Coded by <a href="#">Vita Klejch</a>.
     </div>
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
+    <script type="module" src="script_oop.js"></script>
   </body>
 </html>
